CEA-8: Add constant val to CurrencyIntegrationTest, Rename constant in CurrencyControllerTest